Kubernetes/elk-challenge/elasticsearch-service-discovery.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-discovery
  labels:
    service: elasticsearch
spec:
  clusterIP: None
  ports:
  - port: 9300
    name: node-to-node
  selector:
    service: elasticsearch
