Kubernetes/elk-challenge/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elastic
  labels:
    service: elasticsearch
spec:
  ports:
  - port: 9200
    name: rest
  selector:
    service: elasticsearch
