Kubernetes/elk-challenge/kibana-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-nodeport
  labels:
    app: kibana
spec:
  type: NodePort
  ports:
  - port: 5601
    nodePort: 30100
    name: webapp
  selector:
    app: kibana
