Kubernetes/elk-challenge/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  ports:
  - port: 5601
    name: webapp
  selector:
    app: kibana
